Avoid the use of Number constructors
They look bad and are more inefficient.

FEA: ItEr74S04BugFixing